--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -16,6 +16,8 @@ $COLOR_SECOND: #2E3137;
 $COLOR_TEXT: #FFFFFF;
 $COLOR_ADD: #FF6F31;
 $COLOR_GRAY: #999999;
+$COLOR_CHANGE: #e39651;
+$COLOR_DEL: #e3404b;
 
 $FONT_REGULAR: 'open-regular';
 $FONT_REGULAR_ITALIC: 'open-regularItalic';
