--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import 'styles/theme';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: $COLOR_MAIN;
+}
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: $COLOR_MAIN;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: $COLOR_SECOND;
 }
